--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vitepress dev",
+    "build": "vitepress build",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
@@ -17,6 +18,8 @@
     "vitepress": "2.0.0-alpha.11"
   },
   "dependencies": {
-    "vitepress-plugin-comment-with-giscus": "^1.1.15"
+    "pagefind": "^1.3.0",
+    "vitepress-plugin-comment-with-giscus": "^1.1.15",
+    "vitepress-plugin-pagefind": "^0.4.14"
   }
 }
